fix double scrollbars on chrome

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body {
   align-items: stretch;
   min-height: 100vh;
   background-color: #fff;
+  overflow: hidden;
 }
 
 main {
